# NextMatch_product_recommender

./: .gitignore  README.md  app.py  config.py  data_loader.py  pyproject.toml  questions.py  requirements.txt  sql.py  state.py  taxonomy.py  utils.py
data/: catalog_FRA.csv
ui/: __init__.py  demo_images.py  render.py  styles.py
