[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nextmatch-product-recommender"
version = "0.1.0"
description = "Streamlit-based product recommendation quiz app"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "streamlit>=1.30",
    "pandas>=1.5",
    "duckdb>=0.9",
]
